--- a/Client/Pages/FetchData.razor
+++ b/Client/Pages/FetchData.razor
@@ -1,7 +1,7 @@
 ﻿@page "/fetchdata"
 @using HerexamenTry.Shared
 @inject HttpClient Http
-
+@attribute [Authorize]
 <h1>Weather forecast</h1>
 
 <p>This component demonstrates fetching data from the server.</p>
