--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,7 +1,19 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<PageTitle>Index</PageTitle>
 
-Welcome to your new app.
+<AuthorizeView>
+    <Authorized>
+        @foreach (var claim in context.User.Claims)
+        {
+            <p>@claim.Type - @claim.Value</p>
+        }
+    </Authorized>
+    <NotAuthorized>
+        Please login to see all the claims, <a href="authentication/login">Log in</a>
+    </NotAuthorized>
+</AuthorizeView>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<AuthorizeView Roles="Administrator">
+    Only Administrators can see this.
+</AuthorizeView>
