--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -14,6 +14,6 @@
     </NotAuthorized>
 </AuthorizeView>
 
-<AuthorizeView Roles="Administrator">
+<AuthorizeView Roles="Admin">
     Only Administrators can see this.
 </AuthorizeView>
