--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -21,6 +21,13 @@
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
+            <AuthorizeView Roles="Admin">
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="add-weather">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Add Weather
+                    </NavLink>
+                </div>
+            </AuthorizeView>
         </li>
     </ul>
 </div>
