--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -28,6 +28,13 @@
                     </NavLink>
                 </div>
             </AuthorizeView>
+            <AuthorizeView Roles="Admin">
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="users">
+                        <span class="oi oi-people" aria-hidden="true"></span> Users
+                    </NavLink>
+                </div>
+            </AuthorizeView>
         </li>
     </ul>
 </div>
