--- a/Client/Pages/Leefgroep.razor
+++ b/Client/Pages/Leefgroep.razor
@@ -1,8 +1,58 @@
 ﻿
 @page "/Leefgroep"
 
-<h3>Leefgroep</h3>
+@using HerexamenTry.Shared
+@inject HttpClient Http
+@attribute [Authorize(Roles = "Admin")]
+
+@if (users is null)
+{
+    <p>Loading...</p>
+
+}
+else
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Email</th>
+                <th scope="col">Firstname</th>
+                <th scope="col">Lastname</th>
+                <th scope="col">Picture</th>
+                <th scope="col">Profiel</th>
+                <th scope="col">Verwijderen</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var user in users)
+            {
+                <tr>
+                    <td>@user.Email</td>
+                    <td>@user.FirstName</td>
+                    <td>@user.LastName</td>
+
+                    <td>
+                        <img src="@user.Picture"
+                             alt="..."
+                             class="img-fluid my-1"
+                             style="width: 45px;" />
+                    </td>
+                    <td>@user.FirstName</td>
+                    <td><button type="button" class="btn btn-danger">Verwijderen</button></td>
+                </tr>
+
+
+            }
+        </tbody>
+    </table>
+}
 
 @code {
+    private IEnumerable<UserDto.Index>? users;
 
+    protected override async Task OnInitializedAsync()
+    {
+        users = await Http.GetFromJsonAsync<UserDto.Index[]>("user");
+    }
 }
