--- a/Client/Pages/Leefgroep.razor
+++ b/Client/Pages/Leefgroep.razor
@@ -10,7 +10,8 @@
 
 <HerexamenTry.Client.Pages.Modal @ref="Modal"></HerexamenTry.Client.Pages.Modal>
 
-<button @onclick="() => Modal.Open()" type="button" class="btn btn-info" style="float: right;">Toevoegen</button>
+<button @onclick="() => Reload()"><span class="oi oi-reload" aria-hidden="true"></span>Lijst ophalen</button>
+<button @onclick="() =>Open()" type="button" class="btn btn-info" style="float: right;">Toevoegen</button>
 
 @code {
     private HerexamenTry.Client.Pages.Modal Modal { get; set; }
@@ -53,14 +54,135 @@ else
 
 
 
+<div class="modal @ModalClass" tabindex="-1" role="dialog" style="display:@ModalDisplay">
+
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Jongere toevoegen</h5>
+            </div>
+            <div class="modal-body">
+
+                <EditForm Model="jongere" OnValidSubmit="Add">
+                    <DataAnnotationsValidator />
+                    <ValidationSummary />
+                    <div class="form-group">
+                        <label>Voornaam</label>
+                        <InputText class="form-control" @bind-Value="jongere.Firstname" />
+                        <ValidationMessage For="() => jongere.Firstname" />
+                    </div>
+                    <div class="form-group">
+                        <label>Achternaam</label>
+                        <InputText class="form-control" @bind-Value="jongere.Lastname" />
+                        <ValidationMessage For="() => jongere.Lastname" />
+                    </div>
+                    <div class="form-group">
+                        <label>Geboortedatum</label>
+                        <InputDate class="form-control" @bind-Value="jongere.Date" />
+                        <ValidationMessage For="() => jongere.Date" />
+                    </div>
+                    <div class="form-group">
+                        <label>Gender</label>
+                        <InputSelect class="form-control" @bind-Value="jongere.Gender">
+                            <option value="">Kies</option>
+                            <option value="Man">Man</option>
+                            <option value="Female">Female</option>
+                        </InputSelect>
+                        <ValidationMessage For="() => jongere.Gender" />
+                    </div>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <InputText class="form-control" @bind-Value="jongere.Email" />
+                        <ValidationMessage For="() => jongere.Email" />
+                    </div>
+                    <div class="form-group">
+                        <label>Wachtwoord</label>
+                        <InputText class="form-control" @bind-Value="jongere.Password" />
+                        <ValidationMessage For="() => jongere.Password" />
+                    </div>
+
+                    <button class="btn btn-primary" type="submit" data-dismiss="modal">Toevoegen</button>
+
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="() => Close()">Sluiten</button>
+                </EditForm>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+@if (ShowBackdrop)
+{
+    <div class="modal-backdrop fade show"></div>
+}
+
 
 @code {
-    private JongereDTO[] jongeren;
+    public JongereDTO[] jongeren;
 
     protected override async Task OnInitializedAsync()
+    {
+        jongeren = await Http.GetFromJsonAsync<JongereDTO[]>("https://localhost:44357/api/jongere");
+        //await InvokeAsync(StateHasChanged);
+    }
+
+    public async Task Reload()
     {
         jongeren = await Http.GetFromJsonAsync<JongereDTO[]>("https://localhost:44357/api/jongere");
     }
 
 
+
+
+
+
+    public Guid Guid = Guid.NewGuid();
+    public string ModalDisplay = "none;";
+    public string ModalClass = "";
+    public bool ShowBackdrop = false;
+
+    public void Open()
+    {
+        ModalDisplay = "block;";
+        ModalClass = "Show";
+        ShowBackdrop = true;
+        StateHasChanged();
+    }
+
+    public void Close()
+    {
+        ModalDisplay = "none";
+        ModalClass = "";
+        ShowBackdrop = false;
+        StateHasChanged();
+    }
+
+
+
+    private JongereDTO jongere = new();
+
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        jongere.Date = DateTime.Now;
+    }
+
+    private async Task Add()
+    {
+        var response = await Http.PostAsJsonAsync<JongereDTO>("https://localhost:44357/api/jongere/create", jongere);
+        Console.WriteLine(response);
+        if (response.IsSuccessStatusCode != false)
+        {
+            jongeren = await Http.GetFromJsonAsync<JongereDTO[]>("https://localhost:44357/api/jongere");
+            Close();
+
+        }
+
+        // NavigationManager.NavigateTo("Leefgroep");
+
+
+
+
+    }
 }
