--- a/Client/Pages/Leefgroep.razor
+++ b/Client/Pages/Leefgroep.razor
@@ -1,6 +1,8 @@
 ﻿
 @page "/Leefgroep"
 
+
+@using HerexamenTry.Shared
 @using HerexamenTry.Shared.DTO
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
@@ -13,9 +15,6 @@
 
 <button @onclick="() =>Open()" type="button" class="btn btn-info" style="float: right;">Toevoegen</button>
 
-@code {
-    private HerexamenTry.Client.Pages.Modal Modal { get; set; }
-}
 
 
 
@@ -28,27 +27,31 @@ else
     <table class="table">
         <thead>
             <tr>
-                <th>firstname</th>
-                <th>lastname</th>
+                <th>Voornaam</th>
+                <th>Achternaam</th>
                 <th>gender</th>
-                <th>Date</th>
-                <th>email</th>
+                <th>Geboortedatum</th>
+                <th>Email</th>
                 <th>Username</th>
-                <th>Date</th>
+               
+                <th></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var forecast in jongeren)
             {
-            <tr>
-                <td>@forecast.Firstname</td>
-                <td>@forecast.Lastname</td>
-                <td>@forecast.Gender</td>
-                <td>@forecast.Date</td>
-                <td>@forecast.Email</td>
-                <td>@forecast.Username</td>
-                <td>@forecast.Password</td>
-            </tr>
+                <tr>
+                    <td>@forecast.Firstname</td>
+                    <td>@forecast.Lastname</td>
+                    <td>@forecast.Gender</td>
+                    <td>@forecast.Date</td>
+                    <td>@forecast.Email</td>
+                    <td>@forecast.Username</td>
+                   
+                    <td>
+                        <button type="button" class="btn btn-danger " @onclick="@(() => DeleteUser(@forecast.Email))">Verwijderen</button>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
@@ -104,7 +107,7 @@ else
                     </div>
                     <div class="form-group">
                         <label>Wachtwoord</label>
-                        <InputText class="form-control" @bind-Value="jongere.Password" />
+                        <InputText type="password" class="form-control" @bind-Value="jongere.Password" />
                         <ValidationMessage For="() => jongere.Password" />
                     </div>
 
@@ -126,15 +129,16 @@ else
 
 
 @code {
-    public JongereDTO[] jongeren;
+    public Jongere[] jongeren;
 
     protected override async Task OnInitializedAsync()
     {
-        jongeren = await Http.GetFromJsonAsync<JongereDTO[]>("https://localhost:44357/api/jongere");
+        // base.OnInitialized();
+        jongeren = await Http.GetFromJsonAsync<Jongere[]>("https://localhost:44357/api/begeleider/all");
         //await InvokeAsync(StateHasChanged);
     }
 
- 
+
 
 
 
@@ -158,7 +162,30 @@ else
         ShowBackdrop = false;
         StateHasChanged();
     }
+    public async Task DeleteUser(string email)
+    {
 
+
+        //   var response = await Http.PostAsJsonAsync<JongereDTO>("https://localhost:44357/api/begeleider/delete", jongere);
+        // jongeren = await Http.GetFromJsonAsync<JongereDTO[]>("https://localhost:44357/api/begeleider");
+
+        // var response = await Http.PostAsJsonAsync<JongereDTO>("https://localhost:44357/api/begeleider/delete", jongere);
+        //Console.WriteLine(response);
+        foreach (var item in jongeren)
+        {
+            if (item.Email.Equals(email))
+            {
+                Console.WriteLine(item.Email);
+                // jongeren = await Http.GetFromJsonAsync<JongereDTO[]>("https://localhost:44357/api/begeleider");
+                var response = await Http.DeleteAsync("https://localhost:44357/api/begeleider/delete/" + item.Email);
+
+            }
+
+        }
+
+        jongeren = await Http.GetFromJsonAsync<Jongere[]>("https://localhost:44357/api/begeleider/all");
+        Console.WriteLine("in lijst:" + jongeren.Length);
+    }
 
 
     private JongereDTO jongere = new();
@@ -171,11 +198,11 @@ else
 
     private async Task Add()
     {
-        var response = await Http.PostAsJsonAsync<JongereDTO>("https://localhost:44357/api/jongere/create", jongere);
+        var response = await Http.PostAsJsonAsync<JongereDTO>("https://localhost:44357/api/begeleider/create", jongere);
         Console.WriteLine(response);
         if (response.IsSuccessStatusCode != false)
         {
-            jongeren = await Http.GetFromJsonAsync<JongereDTO[]>("https://localhost:44357/api/jongere");
+            jongeren = await Http.GetFromJsonAsync<Jongere[]>("https://localhost:44357/api/begeleider/all");
             Close();
 
         }
