--- a/Client/Pages/Leefgroep.razor
+++ b/Client/Pages/Leefgroep.razor
@@ -71,7 +71,7 @@ else
 
 <div class="modal @ModalClass" tabindex="-1" role="dialog" style="display:@ModalDisplay">
 
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Jongere toevoegen</h5>
